--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,7 @@
-extends layout
+﻿extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+	h1= title
+	p Welcome to #{title}
+	p=success
+	p 你好，#{user.name}
