--- a/views/index.jade
+++ b/views/index.jade
@@ -7,5 +7,7 @@ block content
 		p=success_log
 		p 你好，
 			a(href='user/perInfo') #{user.name}
+	-else if(success_perInfo)
+		p=success_perInfo
 	-else if(error)
 		p=error
