--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,5 +3,6 @@ html
 	head
 		title= title
 		link(rel='stylesheet', href='/stylesheets/style.css')
+		script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js')
 	body
 		block content
