--- a/views/user/perInfo.jade
+++ b/views/user/perInfo.jade
@@ -4,6 +4,8 @@ extends ../layout
 block content
 	h1= title
 	p Welcome to #{title}
+	-if(error)
+		h1=error
 	form(method='post',action='/user/perInfo')
 		label 用户名：
 			input(name='name',value='#{user.name}')
