--- a/views/book/upbook.jade
+++ b/views/book/upbook.jade
@@ -2,7 +2,7 @@
 block content
 	h1=title
 	p welcome to #{title}
-	form(method='post',action='/books/upbooks')
+	form(method='post',action='/book/upbook')
 		label 书名：
 			input(type='text')
 		br
