--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,7 +9,7 @@ html
 			li
 				a(href='/') 首页
 			li
-				a(href='/books/books') 读书
+				a(href='/book/book') 读书
 			-if(user)
 				li
 					a(href='/user/perInfo') 个人中心
