--- a/views/book/upbook.jade
+++ b/views/book/upbook.jade
@@ -4,7 +4,7 @@ block content
 	p welcome to #{title}
 	form(method='post',action='/book/upbook')
 		label 书名：
-			input(type='text')
+			input(type='text',name='name_zh')
 		br
 		label 章节：
 			input(type='text')
