--- a/views/book/upbook.jade
+++ b/views/book/upbook.jade
@@ -6,10 +6,10 @@ block content
 		label 书名：
 			input(type='text',name='name_zh')
 		br
-		label 章节：
-			input(type='text')
+		label 标签：
+			input(type='text',name='tags')
 		br
 		label 内容：
-			textarea(rows='10',cols='20') 请在这里填写您相对应章节下的文章内容
+			textarea(rows='10',cols='20',name='content') 请在这里填写您相对应章节下的文章内容
 		br
 		input(type='submit')
