take book and content for two

--- a/views/book/mybook.jade
+++ b/views/book/mybook.jade
@@ -7,8 +7,12 @@ block content
 		- for(var index = 0;index<book.length;index++)
 			li
 				a(href='/book/'+'#{book[index].name_zh}',title='#{book[index].name_zh}') #{book[index].name_zh}
+				a(href='/book/upbookDescribe/' + '#{book[index].publisher}/' + '#{book[index].name_zh}',title='修改描述') 修改描述
+				a(href='/book/upbookContent',title='修改内容') 修改内容
 	ul
 		-each val,index in book
 			li=index+1 +':' + val.name_zh
+	-if(success)
+		h2=success
 	p
-		a(href='/book/upbook') 上传书籍
+		a(href='/book/upbookDescribe') 上传书籍描述
