--- a/views/book/book.jade
+++ b/views/book/book.jade
@@ -2,3 +2,11 @@
 block content
 	h2=name
 	p=bookContent
+	form(method='post',action='book')
+		label 书名：
+			input(type='text',name='name',value='#{name}')
+		br
+		label 内容：
+			textarea(type='text',name='bookContent')=bookContent
+		br
+		input(type='submit')
