--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,7 @@ doctype html
 html
 	head
 		title=title
+		link(rel='stylesheet', href='/stylesheets/base/base.css')
 		link(rel='stylesheet', href='/stylesheets/style.css')
 		script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js')
 		script(src='/javascripts/page.js')
