--- a/views/book/mybook.jade
+++ b/views/book/mybook.jade
@@ -1,18 +1,18 @@
 ﻿extends ../layout
 block content
 	h1=title
+	-if(success)
+		h2.f18.fb=success
 	p welcome to #{title}
 	p 我上传过的书：	
 	ul
 		- for(var index = 0;index<book.length;index++)
-			li
-				a(href='/book/'+'#{book[index].name_zh}',title='#{book[index].name_zh}') #{book[index].name_zh}
-				a(href='/book/upbookDescribe/' + '#{book[index].publisher}/' + '#{book[index].name_zh}',title='修改描述') 修改描述
+			li.mt10
+				a.mr10(href='/book/'+'#{book[index].name_zh}',title='#{book[index].name_zh}') #{book[index].name_zh}
+				a.mr10(href='/book/upbookDescribe/' + '#{book[index].publisher}/' + '#{book[index].name_zh}',title='修改描述') 修改描述
 				a(href='/book/upbookContent',title='修改内容') 修改内容
 	ul
 		-each val,index in book
 			li=index+1 +':' + val.name_zh
-	-if(success)
-		h2=success
 	p
 		a(href='/book/upbookDescribe') 上传书籍描述
