--- a/views/book/upbookContent.jade
+++ b/views/book/upbookContent.jade
@@ -1,4 +1,4 @@
-﻿extends ../layout
+extends ../layout
 block content
 	h1=title
 	p welcome to #{title}
@@ -7,6 +7,6 @@ block content
 		h3=tags
 		br
 		label 内容：
-			textarea(rows='10',cols='20',name='content') 请在这里填写您相对应章节下的文章内容
+			textarea(rows='10',cols='20',name='content')=book
 		br
 		input(type='submit')
