create bookContent and modify content are collision,the modify is cut for now

--- a/views/book/mybook.jade
+++ b/views/book/mybook.jade
@@ -10,7 +10,7 @@ block content
 			li.mt10
 				a.mr10(href='/book/'+'#{book[index].name_zh}',title='#{book[index].name_zh}') #{book[index].name_zh}
 				a.mr10(href='/book/upbookDescribe/' + '#{book[index].publisher}/' + '#{book[index].name_zh}',title='修改描述') 修改描述
-				a(href='/book/upbookContent',title='修改内容') 修改内容
+				a(href='/book/upbookContent/' + '#{book[index].publisher}/' + '#{book[index].name_zh}',title='修改内容') 修改内容
 	ul
 		-each val,index in book
 			li=index+1 +':' + val.name_zh
