--- a/views/book/upbookDescribe.jade
+++ b/views/book/upbookDescribe.jade
@@ -1,8 +1,7 @@
 ﻿extends ../layout
 block content
-	h1=book.name_zh
 	p welcome to #{title}
-	form(method='post',action='/book/upbookDescribe/#{user.name}/#{book.name_zh}')
+	form(method='post',action='/book/upbookDescribe')
 		label 书名：
 			input(type='text',name='name_zh',value='#{book.name_zh}')
 		br
