--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,7 +11,7 @@ html
 			li.mr10.w60.fl.tc
 				a.no_unl(href='/') 首页
 			li.mr10.w60.fl.tc
-				a.no_unl(href='/book/mybook') 读书
+				a.no_unl(href='/book/book') 读书
 			-if(user)
 				li.mr10.w60.fl.tc
 					a.no_unl(href='/user/perInfo') 个人中心
