--- a/views/book/book.jade
+++ b/views/book/book.jade
@@ -1,8 +1,11 @@
 ﻿extends ../layout
 block content
-	h2=name
-	-if(bookContent)
-		p=bookContent
-	-else if(error)
-		p=error
-	
+	ul.db
+		li.fl.mr10.w60
+			a.no_unl(href='/book/mybook') 我上传的
+		li.fl.mr10.w60
+			a.no_unl(href='/book/mybook') 我想读的
+		li.fl.mr10.w60
+			a.no_unl(href='/book/mybook') 我读过的
+		li.fl.mr10.w60
+			a.no_unl(href='/book/mybook') 正在看的
