--- a/views/book/mybook.jade
+++ b/views/book/mybook.jade
@@ -8,7 +8,7 @@ block content
 	ul
 		- for(var index = book.length - 1;index >= 0; --index)
 			li.mt10
-				a.mr10(href='/book/mybook#{book[index].name_zh}',title='#{book[index].name_zh}') #{book[index].name_zh}
+				a.mr10(href='/book/mybook/#{book[index].name_zh}',title='#{book[index].name_zh}') #{book[index].name_zh}
 				a.mr10(href='/book/upbookDescribe/#{book[index].publisher}/#{book[index].name_zh}',title='修改描述') 修改描述
 				a(href='/book/upbookContent/#{book[index].publisher}/#{book[index].name_zh}',title='修改内容') 修改内容
 	ul
