--- a/views/book/upbookDescribe.jade
+++ b/views/book/upbookDescribe.jade
@@ -3,9 +3,9 @@ block content
 	p welcome to #{title}
 	form(method='post',action='/book/upbookDescribe')
 		label 书名：
-			input(type='text',name='name_zh')
+			input(type='text',name='name_zh',value='#{book.name_zh}')
 		br
 		label 标签：
-			input(type='text',name='tags')
+			input(type='text',name='tags',value='#{book.tags}')
 		br
 		input(type='submit')
