--- a/views/book/mybook.jade
+++ b/views/book/mybook.jade
@@ -14,9 +14,11 @@ block content
 			li.mt10
 				a.mr10(href='/book/mybook/#{book[index].publisher}/#{book[index]._id}',title='#{book[index].name_zh}') #{book[index].name_zh}
 				a.mr10(href='/book/upbookDescribe/#{book[index].publisher}/#{book[index]._id}',title='修改描述') 修改描述
-				a(href='/book/upbookContent/#{book[index].publisher}/#{book[index]._id}',title='修改内容') 修改内容
+				a.mr10.deleteAll(href='/book/bookDescribe/delete/#{book[index].publisher}/#{book[index]._id}',title='删除此书') 删除此书
+				a.mr10(href='/book/upbookContent/#{book[index].publisher}/#{book[index]._id}',title='修改内容') 修改内容
+				a.mr10.deleteCon(href='/book/bookContent/delete/#{book[index].publisher}/#{book[index]._id}',title='清空内容') 清空内容
 	ul
 		-each val,index in book
 			li=index+1 +':' + val.name_zh
 	p
-		a(href='/book/upbookDescribe') 上传书籍描述
+		a(href='/book/upbook') 上传书籍描述
