--- a/views/book/upbookDescribe.jade
+++ b/views/book/upbookDescribe.jade
@@ -1,11 +1,11 @@
 ﻿extends ../layout
 block content
 	p welcome to #{title}
-	form(method='post',action='/book/upbookDescribe')
-		label 书名：
-			input(type='text',name='name_zh',value='#{book.name_zh}')
-		br
-		label 标签：
-			input(type='text',name='tags',value='#{book.tags}')
-		br
-		input(type='submit')
+		form(method='post',action='/bookes/upbookDescribe/#{user.name}/#{book._id}')
+			label 书名：
+				input(type='text',name='name_zh',value='#{book.name_zh}')
+			br
+			label 标签：
+				input(type='text',name='tags',value='#{book.tags}')
+			br
+			input(type='submit')
