--- a/views/book/mybook.jade
+++ b/views/book/mybook.jade
@@ -21,4 +21,4 @@ block content
 		-each val,index in book
 			li=index+1 +':' + val.name_zh
 	p
-		a(href='/book/upbook') 上传书籍描述
+		a(href='/book/upbook') 添加一本书
