--- a/views/book/bookDescribe.jade
+++ b/views/book/bookDescribe.jade
@@ -2,10 +2,10 @@
 block content
 	h2=name
 	-if(book)
-		h2.fb.f18=book.name_zh
+		h2.fb.f18(bookId='#{book._id}')=book.name_zh
 		p=book.tags
 		p
-			a.mr10.no_unl(href) 想看(添加一个数组字段，放线看的书的ID，方便后面查看)
+			a.mr10.no_unl#want(href='javascript:void(0)') 想看
 			a.mr10.no_unl(href) 看过
 			a.mr10.no_unl(href) 正看
 		a(href='/book/bookContent/#{book._id}') 阅读
