--- a/views/book/upbook.jade
+++ b/views/book/upbook.jade
@@ -9,4 +9,7 @@ block content
 		label 标签：
 			input(type='text',name='tags')
 		br
+		label 封面：
+			input(type='file',name='cover')
+		br
 		input(type='submit')
