--- a/views/book/upbook.jade
+++ b/views/book/upbook.jade
@@ -2,7 +2,7 @@
 block content
 	h1=title
 	p welcome to #{title}
-	form(method='post',action='/book/upbook')
+	form(method='post',action='/book/upbook',enctype='multipart/form-data')
 		label 书名：
 			input(type='text',name='name_zh')
 		br
