--- a/views/book/upbook.jade
+++ b/views/book/upbook.jade
@@ -9,7 +9,7 @@ block content
 		label 标签：
 			input#tags(type='text',name='tags')
 		br
-		input#postbook(type='button')
+		input#postbook(type='button',value='提交')
 	form#formCover.none(method='post',action='/book/upbookCover',enctype='multipart/form-data')
 		label 封面：
 			input#cover(type='file',name='cover')
