--- a/views/head.jade
+++ b/views/head.jade
@@ -1,6 +1,7 @@
 ﻿head
 	title=title
 	link(rel='stylesheet', href='/stylesheets/base/base.css')
+	link(rel='stylesheet', href='/stylesheets/common/common.css')
 	link(rel='stylesheet', href='/stylesheets/style.css')
 	script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js')
 	script(src='/javascripts/page/confirm_page.js')
