--- a/views/user/perInfo.jade
+++ b/views/user/perInfo.jade
@@ -6,34 +6,41 @@ block content
 	p Welcome to #{title}
 	-if(error)
 		h1=error
-	form(method='post',action='/user/perInfo')
+	form.w200.fl(method='post',action='/user/userAvatar',enctype='multipart/form-data')
+		label 头像：
+			input#cover(type='file',name='user-avatar')
+			input#bookId(type='hidden',name='userId')
+		br
+		input#postuserAvatar(type='button',value='提交')
+	form.perInfo.fl(method='post',action='/user/perInfo')
 		label 用户名：
-			input(name='name',value='#{user.name}')
+			input.user-name(name='name',value='#{user.name}')
 		br
 		label 邮箱：
-			input(type='text',name='email',value='#{user.email}')
+			input.user-email(type='text',name='email',value='#{user.email}')
 		br
 		label 性别：
 			-if(user.sex === '1')
-				input(type='radio',name='sex',value='0')
+				input.user-sex(type='radio',name='sex',value='0')
 				|男
-				input(type='radio',name='sex',value='1' checked='#{user.sex}')
+				input.user-sex(type='radio',name='sex',value='1' checked='#{user.sex}')
 				|女
-				input(type='radio',name='sex')
+				input.user-sex(type='radio',name='sex')
 				|保密
 			-else if(user.sex === '0')
-				input(type='radio',name='sex',value='0' checked='checked')
+				input.user-sex(type='radio',name='sex',value='0' checked='checked')
 				|男
-				input(type='radio',name='sex',value='1')
+				input.user-sex(type='radio',name='sex',value='1')
 				|女
-				input(type='radio',name='sex')
+				input.user-sex(type='radio',name='sex')
 				|保密
 			-else
-				input(type='radio',name='sex',value='0')
+				input.user-sex(type='radio',name='sex',value='0')
 				|男
-				input(type='radio',name='sex',value='1')
+				input.user-sex(type='radio',name='sex',value='1')
 				|女
-				input(type='radio',name='sex' checked = 'checked')
+				input.user-sex(type='radio',name='sex' checked = 'checked')
 				|保密
 		br
-		input(type='submit')
+		input#postperInfo(type='button',value='提交')
+	script(src='/javascripts/page/page.js')
