--- a/views/book/upbook.jade
+++ b/views/book/upbook.jade
@@ -9,6 +9,9 @@ block content
 		label 标签：
 			input#tags(type='text',name='tags')
 		br
+		label 简介：
+			input#intro(type='text',name='intro')
+		br
 		input#postbook(type='button',value='提交')
 	form#formCover.none(method='post',action='/book/upbookCover',enctype='multipart/form-data')
 		label 封面：
