--- a/views/book/upbookDescribe.jade
+++ b/views/book/upbookDescribe.jade
@@ -1,11 +1,21 @@
 ﻿extends ../layout
 block content
 	p welcome to #{title}
-		form(method='post',action='/book/upbookDescribe/#{book._id}')
+		form#formDiscribe(method='post',action='/book/upbookDescribe/#{book._id}')
 			label 书名：
-				input(type='text',name='name_zh',value='#{book.name_zh}')
+				input#name_zh(type='text',name='name_zh',value='#{book.name_zh}',sign='#{book._id}')
 			br
 			label 标签：
-				input(type='text',name='tags',value='#{book.tags}')
+				input#tags(type='text',name='tags',value='#{book.tags}')
 			br
-			input(type='submit')
+			label 简介：
+			textarea#intro(rows='10',cols='20',name='content')=book.intro
+			br
+			input#postDescribe(type='button',value='提交')
+		form#formCover(method='post',action='/book/upbookCover/#{book._id}')
+			img.coverImg(src='/images/books/#{book._id}',width='110',height='146')
+			label 封面：
+				input#cover(type='file',name='cover')
+			br
+			input#postCover(type='button',value='提交')
+	script(src='/javascripts/page/page.js')
