--- a/views/book/bookContent.jade
+++ b/views/book/bookContent.jade
@@ -3,7 +3,8 @@ block content
 
 	h2=name
 	-if(bookContent)
-		p=bookContent.content
+		-for(var i = 0; i < bookContent.content.length; ++i)
+			.bookContent.none=bookContent.content[i]
 	-else if(user === null)
 		p 这本书的贡献者还没有来得及上传内容哦～（拦截信息没有显示）
 		a(href='') 提醒TA上传
@@ -11,4 +12,5 @@ block content
 		p 这本书还没有内容
 	-if(error)
 		p=error
+	script(src='/javascripts/page/toDom.js')
 	
