--- a/views/book/upbookContent.jade
+++ b/views/book/upbookContent.jade
@@ -1,19 +1,17 @@
 extends ../layout
 block content
 	// 配置文件
-	<script type="text/javascript" src="/../../ueditor1_3_6-utf8-php/ueditor.config.js"></script>
+	script(type="text/javascript",src="/../../ueditor1_3_6-utf8-php/ueditor.config.js")
 	// 编辑器源码文件
-	<script type="text/javascript" src="/../../ueditor1_3_6-utf8-php/ueditor.all.js"></script>
+	script(type="text/javascript",src="/../../ueditor1_3_6-utf8-php/ueditor.all.js")
 	// 语言包文件(建议手动加在语言，避免在ie下有时因为加载语言失败导致编辑器加载失败)
-	<script type="text/javascript" src="/../../ueditor1_3_6-utf8-php/lang/zh-cn/zh-cn.js"></script>
-	<script id="container" name="content" type="text/plain">这里写你的初始化内容</script>
-	<script type="text/javascript">var editor = UE.getEditor('container')</script>
+	script(type="text/javascript",src="/../../ueditor1_3_6-utf8-php/lang/zh-cn/zh-cn.js")
 	h1=title
 	p welcome to #{title}
 	-if(error)
 		h3=error
 	form(method='post',action='/book/upbookContent/#{id}')
-		label 内容：
-			textarea(rows='10',cols='20',name='content')=bookContent
-		br
-		input(type='submit')
+		script#container(name="content",type="text/plain") #{content}
+		script(type="text/javascript") var editor = UE.getEditor('container')
+		input#commitContent(type='button',value='提交',name='#{id}')
+	script(type='text/javascript',src='/javascripts/page/commitContent.js')
