--- a/views/book/upbookContent.jade
+++ b/views/book/upbookContent.jade
@@ -1,11 +1,11 @@
 extends ../layout
 block content
 	// 配置文件
-	script(type="text/javascript",src="/../../ueditor1_3_6-utf8-php/ueditor.config.js")
+	script(type="text/javascript",src="http://127.0.0.1:3000/ueditor1_3_6-utf8-php/ueditor.config.js")
 	// 编辑器源码文件
-	script(type="text/javascript",src="/../../ueditor1_3_6-utf8-php/ueditor.all.js")
+	script(type="text/javascript",src="/ueditor1_3_6-utf8-php/ueditor.all.js")
 	// 语言包文件(建议手动加在语言，避免在ie下有时因为加载语言失败导致编辑器加载失败)
-	script(type="text/javascript",src="/../../ueditor1_3_6-utf8-php/lang/zh-cn/zh-cn.js")
+	script(type="text/javascript",src="/ueditor1_3_6-utf8-php/lang/zh-cn/zh-cn.js")
 	h1=title
 	p welcome to #{title}
 	-if(error)
