--- a/views/book/book.jade
+++ b/views/book/book.jade
@@ -4,7 +4,7 @@ block content
 		li.fl.mr10.w60
 			a.no_unl(href='/book/mybook') 我上传的
 		li.fl.mr10.w60
-			a.no_unl(href='/book/mywish') 我想读的
+			a.no_unl(href='/user/mywish') 我想读的
 		li.fl.mr10.w60
 			a.no_unl(href='/book/mybook') 我读过的
 		li.fl.mr10.w60
