--- a/views/book/bookContent.jade
+++ b/views/book/bookContent.jade
@@ -3,8 +3,8 @@ block content
 
 	h2=name
 	-if(bookContent)
-		-for(var i = 0; i < bookContent.content.length; ++i)
-			.bookContent !{bookContent.content[i]}
+		-for(var i = 0; i < bookContent.contents.length; ++i)
+			.bookContent !{bookContent.contents[i].content}
 	-else if(user === null)
 		p 这本书的贡献者还没有来得及上传内容哦～（拦截信息没有显示）
 		a(href='') 提醒TA上传
