--- a/public/stylesheets/base/base.css
+++ b/public/stylesheets/base/base.css
@@ -7,8 +7,18 @@ capation,th{text-align:left;}
 h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:normal;}
 q:before, q:after{content:' '}
 abbr,acronym{border:0;}
- 
- 
+@font-face {
+    font-family: 'aquilinetworegular';
+    src: url('../../font/aquilinetwo-webfont.eot');
+    src: url('../../font/aquilinetwo-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../../font/aquilinetwo-webfont.woff') format('woff'),
+         url('../../font/aquilinetwo-webfont.ttf') format('truetype'),
+         url('../../font/aquilinetwo-webfont.svg#aquilinetworegular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+body{font-family: 'aquilinetworegular';}
 
 .ftf{font-family: "Microsoft YaHei" ! important;}
 .f12{font-size:12px;}
