--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,18 +3,18 @@ html
 	include head
 	body
 		ul.nav.db.h50
-			li.mr10.w60.fl.tc
+			li.mr10.w80.fl.tc
 				a.no_unl(href='/') 首页
-			li.mr10.w60.fl.tc
-				a.no_unl(href='/book/book') 读书
+			li.mr10.w80.fl.tc
+				a.no_unl(href='/book/book') 读书dfdf
 			-if(user)
-				li.mr10.w60.fl.tc
+				li.mr10.w80.fl.tc
 					a.no_unl(href='/user/perInfo') 个人中心
-				li.mr10.w60.fl.tc
+				li.mr10.w80.fl.tc
 					a.no_unl.logout(href='/user/logout') 退出
 			-else
-				li.mr10.w60.fl.tc
+				li.mr10.w80.fl.tc
 					a.no_unl(href='/user/login') 登录
-				li.mr10.w60.fl.tc
+				li.mr10.w80.fl.tc
 					a.no_unl(href='/user/reg') 注册
 		block content
