--- a/views/book/bookContent.jade
+++ b/views/book/bookContent.jade
@@ -4,6 +4,8 @@ block content
 	h2=name
 	.bookContent#bookContent
 		-if(bookContent)
+			h2
+				a(href='',target='_blank') 我要写书评
 			-for(var i = 0; i < bookContent.contents.length; ++i)
 				.page(data-page=i+1) !{bookContent.contents[i].content}
 					a(href='/book/upbookContent/'+bookContent._id+'/'+(i+1)) 修改本页
@@ -14,4 +16,15 @@ block content
 			p 这本书还没有内容
 		-if(error)
 			p=error
+	.comment
+		form#comment(method='post',action='/book/comment')
+			input#bookId(type='hidden',value='#{bookContent._id}',name='bookId')
+			input#userId(type='hidden',value='#{user._id}',name='userId')
+			label
+				标题：
+				input.title(type='text',name='title')
+			label
+				内容：
+				textarea.content(name='commentContent')
+			input#comment-btn(type='button',value='提交')
 	script(type='text/javascript',src='/javascripts/page/commitContent.js')
