添加书评人

--- a/views/book/bookContent.jade
+++ b/views/book/bookContent.jade
@@ -5,7 +5,7 @@ block content
 	.bookContent#bookContent
 		-if(bookContent)
 			h2
-				a(href='',target='_blank') 我要写书评
+				a#comment-btn(href='javascript:;',target='_blank') 我要写书评
 			-for(var i = 0; i < bookContent.contents.length; ++i)
 				.page(data-page=i+1) !{bookContent.contents[i].content}
 					a(href='/book/upbookContent/'+bookContent._id+'/'+(i+1)) 修改本页
@@ -16,7 +16,7 @@ block content
 			p 这本书还没有内容
 		-if(error)
 			p=error
-	.comment
+	.comment.none
 		form#comment(method='get',action='/book/comment')
 			input#bookId(type='hidden',value='#{bookContent._id}',name='bookId')
 			input#userId(type='hidden',value='#{user._id}',name='userId')
@@ -26,5 +26,5 @@ block content
 			label
 				内容：
 				textarea.content(name='commentContent')
-			input#comment-btn(type='button',value='提交')
+			input#commit-btn(type='button',value='提交')
 	script(type='text/javascript',src='/javascripts/page/commitContent.js')
