--- a/views/user/perInfo.jade
+++ b/views/user/perInfo.jade
@@ -6,6 +6,7 @@ block content
 	p Welcome to #{title}
 	-if(error)
 		h1=error
+	img.fl(src='../images/default/avatar.png')
 	form.postuserAvatar.w200.fl(method='post',action='/user/userAvatar',enctype='multipart/form-data')
 		progress#progressBar(value='0',max='100')
 		span#percentage
