--- a/views/index.jade
+++ b/views/index.jade
@@ -37,4 +37,4 @@ block content
 							p 评论《#{bookComment[i].bookId.name_zh}》
 							p #{bookComment[i].comment.content}
 							p
-								#{bookComment[i].useful}有用 #{bookComment[i].datetime}
+								!{bookComment[i].useful}有用 #{bookComment[i].datetime}
