--- a/views/user/login.jade
+++ b/views/user/login.jade
@@ -1,14 +1,15 @@
 ﻿extends ../layout
 block content
-	h1=title
-	p Welcom to #{title}
-	-if(error)
-		h1=error
-	form(method='post',action='')
-		label 用户名：
-		input(type='text',name='name')
-		br
-		label 密码：
-		input(type='password',name='password')
-		br
-		input(type='submit')
+	.main-content
+		h1=title
+		p Welcom to #{title}
+		-if(error)
+			h1=error
+		form(method='post',action='')
+			label 用户名：
+			input(type='text',name='name')
+			br
+			label 密码：
+			input(type='password',name='password')
+			br
+			input(type='submit')
