--- a/views/book/book.jade
+++ b/views/book/book.jade
@@ -1,11 +1,12 @@
 ﻿extends ../layout
 block content
-	ul.db
-		li.fl.mr10.w60
-			a.no_unl(href='/book/mybook') 我上传的
-		li.fl.mr10.w60
-			a.no_unl(href='/user/mywish') 我想读的
-		li.fl.mr10.w60
-			a.no_unl(href='/book/mybook') 我读过的
-		li.fl.mr10.w60
-			a.no_unl(href='/book/mybook') 正在看的
+	.main-content
+		ul.db
+			li.fl.mr10.w60
+				a.no_unl(href='/book/mybook') 我上传的
+			li.fl.mr10.w60
+				a.no_unl(href='/user/mywish') 我想读的
+			li.fl.mr10.w60
+				a.no_unl(href='/book/mybook') 我读过的
+			li.fl.mr10.w60
+				a.no_unl(href='/book/mybook') 正在看的
