--- a/views/book/bookDescribe.jade
+++ b/views/book/bookDescribe.jade
@@ -1,16 +1,17 @@
 ﻿extends ../layout
 block content
-	h2=name
-	-if(book)
-		h2.fb.f18(bookId='#{book._id}')=book.name_zh
-		p=book.tags
-		img.cover(src='/images/books/#{book._id}')
-		p
-			a.mr10.no_unl#wish(href='javascript:void(0)') 想看
-			a.mr10.no_unl(href) 看过
-			a.mr10.no_unl(href) 正看
-		a(href='/book/bookContent/#{book._id}') 阅读
-	-else if(error)
-		p=error
-	link(rel='stylesheet', href='/stylesheets/common/common.css')
-	script(src='/javascripts/page/collect_page.js')
+	.main-content
+		h2=name
+		-if(book)
+			h2.fb.f18(bookId='#{book._id}')=book.name_zh
+			p=book.tags
+			img.cover(src='/images/books/#{book._id}')
+			p
+				a.mr10.no_unl#wish(href='javascript:void(0)') 想看
+				a.mr10.no_unl(href) 看过
+				a.mr10.no_unl(href) 正看
+			a(href='/book/bookContent/#{book._id}') 阅读
+		-else if(error)
+			p=error
+		link(rel='stylesheet', href='/stylesheets/common/common.css')
+		script(src='/javascripts/page/collect_page.js')
