--- a/views/book/editPage.jade
+++ b/views/book/editPage.jade
@@ -1,17 +1,18 @@
 extends ../layout
 block content
-	// 配置文件
-	script(type="text/javascript",src="/../../ueditor1_3_6-utf8-php/ueditor.config.js")
-	// 编辑器源码文件
-	script(type="text/javascript",src="/../../ueditor1_3_6-utf8-php/ueditor.all.js")
-	// 语言包文件(建议手动加在语言，避免在ie下有时因为加载语言失败导致编辑器加载失败)
-	script(type="text/javascript",src="/../../ueditor1_3_6-utf8-php/lang/zh-cn/zh-cn.js")
-	h1=title
-	p welcome to #{title}
-	-if(error)
-		h3=error
-	form(method='post',action='/book/upbookContent/#{id}/#{page}')
-		script#container(name="pageContent",type="text/plain") !{content}
-		script(type="text/javascript") var editor = UE.getEditor('container')
-		input#commitPageContent(type='submit',value='提交',name='#{id}')
-	script(type='text/javascript',src='/javascripts/page/commitContent.js')
+	.main-content
+		// 配置文件
+		script(type="text/javascript",src="/../../ueditor1_3_6-utf8-php/ueditor.config.js")
+		// 编辑器源码文件
+		script(type="text/javascript",src="/../../ueditor1_3_6-utf8-php/ueditor.all.js")
+		// 语言包文件(建议手动加在语言，避免在ie下有时因为加载语言失败导致编辑器加载失败)
+		script(type="text/javascript",src="/../../ueditor1_3_6-utf8-php/lang/zh-cn/zh-cn.js")
+		h1=title
+		p welcome to #{title}
+		-if(error)
+			h3=error
+		form(method='post',action='/book/upbookContent/#{id}/#{page}')
+			script#container(name="pageContent",type="text/plain") !{content}
+			script(type="text/javascript") var editor = UE.getEditor('container')
+			input#commitPageContent(type='submit',value='提交',name='#{id}')
+		script(type='text/javascript',src='/javascripts/page/commitContent.js')
