--- a/views/index.jade
+++ b/views/index.jade
@@ -17,22 +17,22 @@ block content
 				-for(var index = books.length - 1; index >= 0; --index)
 					li.fl.w200.mr10
 						img.cover(src='/images/books/#{books[index]._id}')
-						a.no_unl(href='book/#{books[index]._id}') #{books[index].name_zh}
+						a.no_unl(href='/book/#{books[index]._id}') #{books[index].name_zh}
 						span.intro #{books[index].intro}
 						-if(books[index].bookContent._time.minute)
 							span.time 更新于 #{books[index].bookContent._time.minute}
 		.hd
-		//- 	h2 书评人
-		//- .hd
-		//- 	ul
-		//- 		-for (var i = bookComment.length - 1; i >= 0; --i)
-		//- 			li.fl.w200.mr10
-		//- 				a(href='')
-		//- 					img(src='')
-		//- 				.userInfo
-		//- 					p
-		//- 						a(href='') #{bookComment[i].userId.name}
-		//- 					p 评论《#{bookComment[i].bookId.name_zh}》
-		//- 					p #{bookComment[i].comment.content}
-		//- 					p
-		//- 						!{bookComment[i].useful}有用 #{bookComment[i].datetime}
+			h2 书评人
+		.hd
+			ul
+				-for (var i = bookComment.length - 1; i >= 0; --i)
+					li.fl.w200.mr10
+						a(href='')
+							img(src='')
+						.userInfo
+							p
+								a(href='') #{bookComment[i].userId.name}
+							p 评论《#{bookComment[i].bookId.name_zh}》
+							p #{bookComment[i].comment.content}
+							p
+								!{bookComment[i].useful}有用 #{bookComment[i].datetime}
