完善 想看 正看 看过

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,7 +12,7 @@ html
 				li
 					a.no_unl(href='/book/serial') 最新连载
 				li
-					a.no_unl(href='/reviewer') 书评人
+					a.no_unl(href='/user/reviewer') 书评人
 				-if(user)
 					li
 						a.no_unl(href='/user/perInfo') 个人中心
