--- a/views/book/bookDescribe.jade
+++ b/views/book/bookDescribe.jade
@@ -3,13 +3,13 @@ block content
 	.main-content
 		h2=name
 		-if(book)
-			h2.fb.f18(bookId='#{book._id}')=book.name_zh
+			h2.fb.f18#bookTitle(bookId='#{book._id}')=book.name_zh
 			p=book.tags
 			img.cover(src='/images/books/#{book._id}')
 			p
 				a.mr10.no_unl#wish(href='javascript:void(0)') 想看
-				a.mr10.no_unl(href) 看过
-				a.mr10.no_unl(href) 正看
+				a.mr10.no_unl#readed(href='javascript:void(0)') 看过
+				a.mr10.no_unl#reading(href='javascript:void(0)') 正看
 			a(href='/book/bookContent/#{book._id}') 阅读
 		-else if(error)
 			p=error
