--- a/views/user/reviewer.jade
+++ b/views/user/reviewer.jade
@@ -5,8 +5,8 @@ block content
 		ul
 			-for (var i = bookComment.length - 1; i >= 0; --i)
 				li.fl.w200.mr10
-					a(href='')
-						img(src='')
+					a(href='/user/#{bookComment[i].userId.name}')
+						img(src='/images/avatar/#{bookComment[i].userId._id}')
 					.userInfo
 						p
 							a(href='/user/#{bookComment[i].userId.name}') #{bookComment[i].userId.name}
