--- a/views/user/perInfo.jade
+++ b/views/user/perInfo.jade
@@ -51,4 +51,7 @@ block content
 					|保密
 			br
 			input#postperInfo(type='button',value='提交')
+		.mybook
+			a(href='/book/mybook') 我上传的书
+			a(href='/user/mywish') 我喜欢读的
 		script(src='/javascripts/page/page.js')
